Changelog
=========

2.5 (unreleased)
----------------

- Added back the BusFactor test, the XMLRPC API supports it.

- #26: Adding a test to check for a development status classifier.

- #21: Accept the new project_urls distribution data.


2.4 (2018-08-15)
----------------

- Get rid of the tests that rely on HTML scraping, it's too brittle.

- Update to use pypi.org instead of pypi.python.org
  [Andreas Lutro, Lennart Regebro]

- Added -n command line option to set the minimum rating needed for pyroma
  to return success, useful in scripts.
  [Scott Colby]


2.3.1 (2018-05-28)
------------------

- Fixed #12: Installation fails with a non-UTF8 locale under Python 3.
  [ericof, 4383, regebro]


2.3 (2017-11-28)
----------------

- Check that a classifier specifies the project license. [4383]

- Dropped support for Python 2.6, 3.3 and 3.4.

- Fixed a unicode issue [gotcha]

- Stopped recommending places to keep documentation.


2.2 (2016-10-26)
----------------

- Removed the TestSuite rating. I decided it was too close to looking at
  code quality. Pyroma no longer cares if you have tests or not.

- Fixed #36: PyPI now requires https.


2.1 (2016-10-18)
----------------

- #35: Support for PEP-440.


2.0.2 (2016-03-06)
------------------

- Faked the __name__ variable to allow you to have a "if __name__" construct
  in the setup.py.


2.0.1 (2016-03-06)
------------------

- Fixed a bug under Python 3 with certain imports.


2.0.0 (2016-02-28)
------------------

- Stable release.


2.0.0b2 (2015-11-09)
--------------------

- Made it run under Python 3 again.

- PEP8


2.0.0b1 (2015-11-08)
--------------------

- Big rewrite of how data is extracted from Distutils/Setuptools.


1.8.3 (2015-11-08)
------------------

- Issue #26: Checking a PyPI package could fail under Python 3.

1.8.2 (2015-06-14)
------------------

- Do not complain that the version number should be a string, when it
  is a basestring.
  [maurits]


1.8.1 (2015-04-27)
------------------
