@@ -21,6 +21,7 @@ setup(name='complete',
       keywords=['pypi', 'quality', 'example'],
       author='Lennart Regebro',
       author_email='regebro@gmail.com',
+      url='https://github.com/regebro/pyroma',
       project_urls={'Source Code': 'https://github.com/regebro/pyroma'},
       license='MIT',
       packages=find_packages(exclude=['ez_setup', 'examples', 'tests']),
